# index.js
@@ -5,32 +5,18 @@ const port = process.env.APP_PORT;
 const mariadb = require("mariadb");
 const cors = require('cors');
 
-//const app = require('express')();
-//const port = 8080
+
 const swaggerUi = require('swagger-ui-express')
-const yamljs = require('yamljs')
+const yamljs = require('yamljs');
+const { orders } = require("./db");
 const swaggerDocument = yamljs.load('./docs/swagger.yaml');
-//const swaggerDocument = require('./docs/swagger.json');
+
 app.use(cors())
 
 
-/* const estetic = [
-    {id: 1, name: "Botox", price:250},
-    {id: 2, name:"LPG massage", price:70},
-    {id: 3, name:"Manual teraphy", price:90}
-] */
-
 require("./routes/app_routes")(app)
 
-app.get('/Esteticclinic', (req, res) => {
-    res.send(estetic)
-})
-
-//app.get('/Esteticclinic', (req, res) => {
-   // res.send(estetic)
-//})
-
-app.get('/Esteticclinic/:id', (req,res) => {
+app.get('/EsteticClinic/:id', (req,res) => {
     if (typeof estetic[req.params.id -1] === 'undifined')
     {
         return res.status(404).send({error: "Service not found"})
@@ -38,8 +24,24 @@ app.get('/Esteticclinic/:id', (req,res) => {
     res.send(estetic[req.params.id - 1])
 })
 
-app.post('/Esteticclinic', (req, res) => {
-    if (!req.body.name || !req-body.price) {
+app.get('/clients/:id', (req,res) => {
+    if (typeof clients[req.params.id -1] === 'undifined')
+    {
+        return res.status(404).send({error: "Service not found"})
+    }
+    res.send(clients[req.params.id - 1])
+})
+
+app.get('/orders/:id', (req,res) => {
+    if (typeof orders[req.params.id -1] === 'undifined')
+    {
+        return res.status(404).send({error: "Service not found"})
+    }
+    res.send(orders[req.params.id - 1])
+})
+
+app.post('/EsteticClinic', (req, res) => {
+    if (!req.body.name || !req.body.price) {
         return res.status(400).send({ error: 'One or all params are missing' })
     }
     let estserv = { 
@@ -47,20 +49,71 @@ app.post('/Esteticclinic', (req, res) => {
         price: req.body.price,
         name: req.body.name
     }
+    
     estetic.push(estserv)
+
     res.status(201)
-    .location(`${getBaseUrl(req)}/Esteticclinic/${estetic.length}`)
+    .location(`${getBaseUrl(req)}/EsteticClinic/${estetic.length}`)
     .send(estserv)
+})
+
+app.post('/clients', (req, res) => {
+    if (!req.body.name || !req.body.birthday || !req.body.identityCode) {
+        return res.status(400).send({ error: 'One or all params are missing' })
+    }
+    let client = { 
+        id: clients.length +1,
+        name: req.body.name,
+        birthday: req.body.birthday,
+        identityCode: req.body.identityCode
+    }
+    clients.push(client)
+    res.status(201)
+    .location(`${getBaseUrl(req)}/clients/${clients.length}`)
+    .send(client)
+})
+
+app.post('/orders', (req, res) => {
+    if (!req.body.service_id || !req.body.order_id) {
+        return res.status(400).send({ error: 'One or all params are missing' })
+    }
+    let order = { 
+        id: orders.length +1,
+        service_id: req.body.service_id,
+        order_id: req.body.order_id
+    }
+    orders.push(order)
+    res.status(201)
+    .location(`${getBaseUrl(req)}/orders/${orders.length}`)
+    .send(order)
 })
 
 
 app.use(express.json())
 
-app.delete('/Esteticclinic/:id', (req, res) => {
+app.delete('/EsteticClinic/:id', (req, res) => {
     if (typeof estetic[req.params-id - 1] === 'undefined') {
         return res.status(404).send({error: "Service not found"})
     }
     estetic.splice(req.params.id -1, 1)
+
+    res.status(204).send({error: "No content"})
+})
+
+app.delete('/clients/:id', (req, res) => {
+    if (typeof clients[req.params-id - 1] === 'undefined') {
+        return res.status(404).send({error: "Service not found"})
+    }
+    clients.splice(req.params.id -1, 1)
+
+    res.status(204).send({error: "No content"})
+})
+
+app.delete('/orders/:id', (req, res) => {
+    if (typeof orders[req.params-id - 1] === 'undefined') {
+        return res.status(404).send({error: "Service not found"})
+    }
+    orders.splice(req.params.id -1, 1)
 
     res.status(204).send({error: "No content"})
 })
