# routes/app_routes.js
@@ -1,4 +1,6 @@
 const EsteticController = require('../controllers/EsteticController.js')
+const OrdersController = require('../controllers/OrdersController.js')
+const ClientsController = require('../controllers/ClientsController.js')
 
 module.exports = (app) => {
     app.route("/estetic-clinic")
@@ -8,4 +10,20 @@ module.exports = (app) => {
     .get(EsteticController.getById)
     .put(EsteticController.updateById)
     .delete(EsteticController.deleteById)
+
+    app.route("/clients")
+    .get(ClientsController.getAll)   
+    .get(ClientsController.createNew)
+    app.route("/clients/:id")
+    .get(ClientsController.getById)
+    .put(ClientsController.updateById)
+    .delete(ClientsController.deleteById)
+
+    app.route("/orders")
+    .get(OrdersController.getAll)   
+    .get(OrdersController.createNew)
+    app.route("/orders/:id")
+    .get(OrdersController.getById)
+    .put(OrdersController.updateById)
+    .delete(OrdersController.deleteById)
 }
